--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ampersand/stores",
+    "name": "evan-burrell/stores",
     "description": "Retail stores Magento 2 module",
     "type": "magento2-module",
     "authors": [
